# hdk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml
hdk-archive/: Cargo.toml
hdk-archive/src/: archive.rs  lib.rs  structs.rs
hdk-archive/src/bar/: reader.rs  tests.rs  writer.rs
hdk-archive/src/mapper/: mod.rs
hdk-archive/src/sharc/: mod.rs  reader.rs  structs.rs  tests.rs  writer.rs
hdk-comp/src/lzma/: mod.rs  reader.rs  segment.rs  tests.rs
hdk-comp/src/zlib/: tests.rs
hdk-mdl/: Cargo.toml
hdk-mdl/examples/: hm2json.rs
hdk-mdl/src/: export.rs  lib.rs
hdk-sdat/src/: block.rs  compression.rs  lib.rs  reader.rs  writer.rs
hdk-secure/: Cargo.toml
hdk-secure/src/: lib.rs
hdk-secure/src/hash/: mod.rs
hdk-secure/src/sceneid/: mod.rs
sdat/: Cargo.toml
sdat/src/: compression.rs  lib.rs
secure/src/: tests.rs
