[workspace]
resolver = "3"
members = ["hdk-archive", "hdk-comp", "hdk-firmware", "hdk-sdat", "hdk-secure"]

# Configure the linters to be as annoying as possible
[lints.clippy]
cargo = "deny"
all = "deny"
pedantic = "deny"
nursery = "deny"

correctness = "warn"
style = "warn"
complexity = "warn"
perf = "warn"

# Override some of the default lints
multiple_crate_versions = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }

missing_docs_in_private_items = { level = "deny", priority = 1 }

[lints.rust]
unused_imports = "forbid"
